syntax = "proto3";

package gophkeeper;

option go_package = "gophkeeper/proto";

message Password {
  string website = 1;
  string login = 2;
  string password = 3;
}

// Password
message AddPasswordRequest {
  Password password = 1;
}

message AddPasswordResponse {
}

message GetPasswordRequest {
  string website = 1;
}

message GetPasswordResponse {
  repeated Password passwords = 1;
  repeated uint32 ids = 2;
}

message UpdatePasswordRequest {
  int32 id = 1;
  Password password = 2;
}

message UpdatePasswordResponse {
}

message DeletePasswordRequest {
  int32 id = 1;
}

message DeletePasswordResponse {
}

// Text
message Text {
  string title = 1;
  string text = 2;
}

message AddTextRequest {
  Text text = 1;
}

message AddTextResponse {
}

message GetTextRequest {
  string title = 1;
}

message GetTextResponse {
  repeated Text texts = 1;
  repeated uint32 ids = 2;
}

message UpdateTextRequest {
  uint32 id = 1;
  Text text = 2;
}

message UpdateTextResponse {
}

message DeleteTextRequest {
  uint32 id = 1;
}

message DeleteTextResponse {
}

// Binary file
message Binary {
  string title = 1;
  bytes file = 2;
}

message AddBinaryRequest {
  Binary binary = 1;
}

message AddBinaryResponse {
}

message GetBinaryRequest {
  string title = 1;
}

message GetBinaryResponse {
  repeated Binary binaries = 1;
  repeated uint32 ids = 2;
}

message UpdateBinaryRequest {
  uint32 id = 1;
  Binary binary = 2;
}

message UpdateBinaryResponse {
}

message DeleteBinaryRequest {
  uint32 id = 1;
}

message DeleteBinaryResponse {
}

// Payment
message Payment {
  string name = 1;
  string cardholder = 2;
  string number = 3;
  string expDate = 4;
  string code = 5;
}

message AddPaymentRequest {
  Payment payment = 1;
}

message AddPaymentResponse {
}

message GetPaymentRequest {
  string name = 1;
}

message GetPaymentResponse {
  repeated Payment payments = 1;
  repeated uint32 ids = 2;
}

message UpdatePaymentRequest {
  uint32 id = 1;
  Payment payment = 2;
}

message UpdatePaymentResponse {
}

message DeletePaymentRequest {
  uint32 id = 1;
}

message DeletePaymentResponse {
}

service GophKeeper {
  rpc AddPassword(AddPasswordRequest) returns (AddPasswordResponse);
  rpc GetPassword(GetPasswordRequest) returns (GetPasswordResponse);
  rpc UpdatePassword(UpdatePasswordRequest) returns (UpdatePasswordResponse);
  rpc DeletePassword(DeletePasswordRequest) returns (DeletePasswordResponse);

  rpc AddText(AddTextRequest) returns (AddTextResponse);
  rpc GetText(GetTextRequest) returns (GetTextResponse);
  rpc UpdateText(UpdateTextRequest) returns (UpdateTextResponse);
  rpc DeleteText(DeleteTextRequest) returns (DeleteTextResponse);

  rpc AddBinary(AddBinaryRequest) returns (AddBinaryResponse);
  rpc GetBinary(GetBinaryRequest) returns (GetBinaryResponse);
  rpc UpdateBinary(UpdateBinaryRequest) returns (UpdateBinaryResponse);
  rpc DeleteBinary(DeleteBinaryRequest) returns (DeleteBinaryResponse);

  rpc AddPayment(AddPaymentRequest) returns (AddPaymentResponse);
  rpc GetPayment(GetPaymentRequest) returns (GetPaymentResponse);
  rpc UpdatePayment(UpdatePaymentRequest) returns (UpdatePaymentResponse);
  rpc DeletePayment(DeletePaymentRequest) returns (DeletePaymentResponse);
}
